# CallerSensitive-SVF

./: CallerSensitiveSummary.json  README.md  callerSummary.json  memoryLeak.ll  result.txt  test.sh
.github/workflows/: main.yml
NativeFlowBench/native_leak/: native_leak.json  taint-config.yml
TestCases/AndroidUn7zip/: AndroidUn7zip.json
TestCases/EmailChecker/: EmailChecker.json
TestCases/GL2/: GL2.json
TestCases/LiveStream/: LiveStream.json
TestCases/LoggingApp/: LoggingApp.json
TestCases/Smoke/: smoke.json  taint-config.yml
TestCases/Test/: test.cpp  test.json
TestCases/base64encode/: base64encode.json  taint-config.yml
TestCases/curve25519-java/: curve25519-java.json  taint-config.yml
TestCases/jniSocketFiledescriptor/: socket.json  taint-config.yml
src/: CMakeLists.txt  taint.cpp
src/include/: JsonReaderWriter.h  TaintChecker.h
src/lib/: JsonReaderWriter.cpp  TaintChecker.cpp
svf-llvm/tools/: CMakeLists.txt
svf-llvm/tools/TAINT/: CMakeLists.txt  taint.cpp
svf-llvm/tools/TAINT/include/: JsonReaderWriter.h  TaintChecker.h
svf-llvm/tools/TAINT/lib/: JsonReaderWriter.cpp  TaintChecker.cpp
svf/include/SABER/: SrcSnkDDA.h
svf/include/Util/: ExtAPI.json
test/: taint-config.yml  twoNativeMethods.ll  twoNativeMethodsSummary.json
